增加数据看板页面
